# customer-service-api

./: docker-compose.yml  pyproject.toml  run.py
api/: __init__.py  config.py  urls.py
api/models/: __init__.py  contacts.py  macapa.py  varejao.py
api/utils/: auth.py  format.py  scripts.py
api/views/contacts/: create.py  parser.py  view.py
tests/http/: POST.http
tests/unit/: base.py  test_contact.py
